# time-aware-conf-learn-to-rank

./: .gitignore  README.md  docker-compose.yml  main.py  project_inconsistencies.md  pyproject.toml  requirements.txt  setups.json
data/amazon-beauty/: info.json
data/amazon-clothes-shoes-jewelry/: info.json
data/amazon-movies-tvs/: info.json  readme.md
data/good_reads/: info.json  readme.md
data/jester-joke/: info.json
data/ml-100k/: info.json
data/ml-1m/: info.json
data/netflix-prize/: README  info.json
data/rotten-tomatoes/: info.json  readme.md
notebooks/: amazon-tvs-dataset.ipynb  charts_dissertation.ipynb  charts_models_performance.ipynb  conf_output_analysis.ipynb  convergence_conf.ipynb  data_sparsity.ipynb  dissimilarity.ipynb  embedding_conf_study.ipynb  mf_pdf.py  movie_lens.ipynb  multivae_test.py  ordrec_outputs.ipynb  rotten_tomatoes.ipynb  sigma_definition_tests.ipynb  tables_models_performances.ipynb
recsysconfident/: cobar.py  constants.py  environment.py  setup.py  setup_manager.py
recsysconfident/data_handling/: miscellaneous.py  post_processing.py  splitting.py
recsysconfident/data_handling/dataloader/: binary_ui_ids_dataloader.py  int_ui_ids_dataloader.py
recsysconfident/data_handling/datasets/: amazon_products.py  csv_reader.py  datasetinfo.py  goodreads.py  jester_joke_reader.py  (+1 more)
recsysconfident/ml/: conv1d_parameters.py  distance_metrics.py  losses.py
recsysconfident/utils/: binary_encoding.py  datasets.py  equation_solver.py  files.py
setups/: readme.md
tests/: test_main.py
tests/data/: ratings-1m.csv
(+40 files in other folders)
