[tool.poetry]
name = "time-aware-conf-learn-to-rank"
version = "0.1.0"
description = ""
authors = ["Joel Pires <joelpires70@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
pytest = "^8.2.1"
scipy = "^1.13.0"
scikit-learn = "^1.5.0"
notebook = "^7.3.1"
torch="^2.5"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
